--- a/src/css/TimeLine.css
+++ b/src/css/TimeLine.css
@@ -1,38 +1,38 @@
 .TLOuterContainer {
-    font-size: 16px;
-	/* background-color: #e2efff; */
-	display: flex;
-    flex-direction: column;
-    align-items: center;
-	box-sizing: border-box;
+  font-size: 16px;
+  /* background-color: #e2efff; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
 }
 
 .TLCaseDetails {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2vh;
-    background-color: white;
-    width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2vh;
+  background-color: white;
+  width: 40%;
 }
 
 .TLCaseDescription {
-    color: white;
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    padding: 2rem;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    /* text-align: center; */
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  padding: 2rem;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  /* text-align: center; */
 }
 
 .TLOverlayOuter {
-    position: relative;
-    width: 100%;
+  position: relative;
+  width: 100%;
 }
 
 /* .TLCaseImage {
@@ -40,40 +40,41 @@
     width: 100%;
     height: auto;
   } */
-  
-  .TLOverlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: .5s ease;
-    border-radius: 1.5rem;
-    /* background-color: #008CBA; */
-  }
-  
-  .TLOverlayOuter:hover .TLOverlay {
-    opacity: 1;
-	opacity: 1;
-	backdrop-filter: blur(12px);
-  }
+
+.TLOverlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  border-radius: 1.5rem;
+  /* background-color: #008CBA; */
+}
+
+.TLOverlayOuter:hover .TLOverlay {
+  opacity: 1;
+  opacity: 1;
+  backdrop-filter: blur(12px);
+}
 
 .TLCaseImage {
-    height: auto;
-	width: 100%;
-	/* display: flex;
+  height: auto;
+  width: 100%;
+  /* display: flex;
 	justify-content: center;
 	align-items: center; */
-	overflow: hidden;
-	border-radius: 1.5rem;
-	max-height: 320px;
-	/* object-fit: contain; */
-	max-height: 40vh;
-	/* max-width: 300px; */
+  overflow: hidden;
+  border-radius: 1.5rem;
+  max-height: 320px;
+  /* object-fit: contain; */
+  max-height: 40vh;
+  /* max-width: 300px; */
 }
+
 /* 
 .TLCaseImage img {
 	max-height: 30vh;
@@ -89,130 +90,136 @@
 
 
 .MainTimeLine {
-    position: relative;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 /* The actual timeline (the vertical ruler) */
 .MainTimeLine::after {
-    content: '';
-    position: absolute;
-    width: 6px;
-    background-color: white;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    margin-left: -3px;
+  content: '';
+  position: absolute;
+  width: 6px;
+  background-color: white;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
 }
-  
-  /* Container around content */
-  .TLContainer {
-    padding: 10px 40px;
-    position: relative;
-    background-color: inherit;
-    width: 50%;
-  }
-  
-  /* The circles on the timeline */
-  .TLContainer::after {
-    content: '';
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    right: -17px;
-    background-color: white;
-    border: 4px solid #FF9F55;
-    top: 15px;
-    border-radius: 50%;
-    z-index: 1;
-  }
-  
-  /* Place the container to the left */
-  .left {
-    left: 0;
-  }
-  
-  /* Place the container to the right */
-  .right {
-    left: 50%;
-  }
-  
-  /* Add arrows to the left container (pointing right) */
-  .left::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    right: 30px;
-    border: medium solid white;
-    border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent rgb(255, 1, 1);
-  }
-  
-  /* Add arrows to the right container (pointing left) */
-  .right::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    left: 30px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent rgb(255, 1, 1) transparent transparent;
-  }
-  
-  /* Fix the circle for containers on the right side */
-  .right::after {
-    left: -16px;
-  }
-  
-  /* The actual content */
-  .TLContent {
-    padding: 20px 30px;
-    background-color: white;
-    position: relative;
-    border-radius: 6px;
-  }
-  
-  /* Media queries - Responsive timeline on screens less than 600px wide */
-  @media screen and (max-width: 600px) {
-    /* Place the timelime to the left */
-    .MainTimeLine::after {
-    left: 31px;
-    }
-    
-    .TLCaseDetails{
-        width: 100%;
-        padding: 2vh;
-    }
 
-    /* Full-width containers */
-    .TLContainer {
+/* Container around content */
+.TLContainer {
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+}
+
+/* The circles on the timeline */
+.TLContainer::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -17px;
+  background-color: white;
+  border: 4px solid #FF9F55;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Place the container to the left */
+.left {
+  width: max-content;
+  position: relative;
+  right: 50%;
+}
+
+/* Place the container to the right */
+.right {
+  width: max-content;
+  position: relative;
+  left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  right: 30px;
+  border: medium solid white;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent rgb(255, 1, 1);
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  left: 30px;
+  border: medium solid white;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent rgb(255, 1, 1) transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+  left: -16px;
+}
+
+/* The actual content */
+.TLContent {
+  padding: 20px 30px;
+  background-color: white;
+  position: relative;
+  border-radius: 6px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+
+  /* Place the timelime to the left */
+  .MainTimeLine::after {
+    left: 31px;
+  }
+
+  .TLCaseDetails {
+    width: 100%;
+    padding: 2vh;
+  }
+
+  /* Full-width containers */
+  .TLContainer {
     width: 100%;
     padding-left: 70px;
     padding-right: 25px;
-    }
-    
-    /* Make sure that all arrows are pointing leftwards */
-    .TLContainer::before {
+  }
+
+  /* Make sure that all arrows are pointing leftwards */
+  .TLContainer::before {
     left: 60px;
     border: medium solid white;
     border-width: 10px 10px 10px 0;
     border-color: transparent rgb(255, 1, 1) transparent transparent;
-    }
-  
-    /* Make sure all circles are at the same spot */
-    .left::after, .right::after {
+  }
+
+  /* Make sure all circles are at the same spot */
+  .left::after,
+  .right::after {
     left: 15px;
-    }
-    
-    /* Make all right containers behave like the left ones */
-    .right {
+  }
+
+  /* Make all right containers behave like the left ones */
+  .right {
     left: 0%;
-    }
+  }
 }
